Tue Aug 31 14:14:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * run_tests.pl:

          Save and restore changed environment variables from environment.txt.
          This prevents one test from interfering with all subsequent tests.

        * tests/conditional_specific_verbatim_wildcards/environment.txt:

          Set MPC_GHS_UNIX=1 so ghs is treated a Unix for this test.

        * expected/conditional_specific_verbatim_wildcards/ghs/source/*.gpj:

          Re-generated for the above change.

Mon Aug 30 21:47:57 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * expected/conditional_specific_verbatim_wildcards/vc10/*:
        * expected/conditional_specific_verbatim_wildcards/vc9/*:

          Re-generated based on the change below:

        * tests/conditional_specific_verbatim_wildcards/source/csvw.mpc:

          Use prop:windows instead of listing individual types, this accounts
          for vc9 and vc10 which were previously excluded.

Mon Aug 30 19:29:31 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * expected/*/nmake/*:

          Re-generated nmake results based on the MPC change:
          Mon Aug 30 19:21:23 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * run_tests.pl:

          Set environment variables to force -type cdt6 into Linux mode.

Mon Aug 30 18:39:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * expected/implicit_resources/cdt6/dir3/cdt_dir3/.cproject:
        * tests/implicit_resources/additional_options.txt:

          Added -value_template use_threads=1 for cdt6 to work-around bug
          #3880, and re-generated the expected output.

Sat Aug 28 04:21:56 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * expected/dependencies/vc10/foo__someexecutable.vcxproj:
        * expected/dependencies/vc10/foo__someexecutable.vcxproj.filters:
        * expected/dependencies/vc10/foo__somelib.vcxproj:
        * expected/dependencies/vc10/foo__somelib.vcxproj.filters:
